--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Projeto PW</groupId>
-  <artifactId>Renan</artifactId>
+  <groupId>projeto-pw</groupId>
+  <artifactId>renan</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
