--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>projeto-pw</groupId>
-  <artifactId>renan</artifactId>
+  <artifactId>renan-pw</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
